fixed css images path to align with hybris; added contact us file upload size validation; change login url params to hash

--- a/src/sapakim/sapakim.scss
+++ b/src/sapakim/sapakim.scss
@@ -407,6 +407,11 @@
 						font-size: 2rem;
 						line-height: 1.25;
 					}
+					p{
+						margin:0;
+						padding:0;
+						display: inline;
+					}
 				}
 
 				&:last-of-type {
